--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-﻿<div class="col-md-6 col-md-offset-3">
+﻿<div class="home-container">
     <h1>Hi {{userName}}!</h1>
-    <p><a [routerLink]="['/login']" (click) ="logout()">Logout</a></p>
+    <p><a [routerLink]="['/login']" (click)="logout()">Logout</a></p>
 </div>
