--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
         <div [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="username">Username</label>
-            <input type="text" name="username" [(ngModel)]="model.username" #username="ngModel" required />
+            <input type="text" name="username" [(ngModel)]="model.email" #username="ngModel" required />
             <div *ngIf="f.submitted && !username.valid">Username is required</div>
         </div>
         <div [ngClass]="{ 'has-error': f.submitted && !password.valid }">
