1) add client metadata 2) change theme 3) add material components 4) add user service 5) refactoring

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 ﻿<mat-toolbar color="primary">
-    <label>Music-cloud</label>
+    <img class="app-img" src="../assets/image/app-icon.png">
+    <span class="app-title">Music cloud</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
