--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -1,6 +1,7 @@
 .home-container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: calc(100vh - 64px);
 }
