--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,4 +1,8 @@
 ﻿<div class="home-container">
-    <h1>Hi, {{userName}}!</h1>
+    <h2>Profile</h2>
+    <span>FirstName: {{user.userDetails.firstName}}</span>
+    <span>LastName: {{user.userDetails.lastName}}</span>
+    <span>NickName: {{user.userDetails.nick}}</span>
+    <span>Email Address: {{user.email}}</span>
     <button mat-raised-button color="warn" (click)="logout()">Logout</button>
 </div>
