implement registration page

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="home-container">
-    <h2>Profile</h2>
-    <span>FirstName: {{user.userDetails.firstName}}</span>
-    <span>LastName: {{user.userDetails.lastName}}</span>
-    <span>NickName: {{user.userDetails.nick}}</span>
-    <span>Email Address: {{user.email}}</span>
+    <h2>Профиль</h2>
+    <span>Имя: {{user.userDetails.firstName}}</span>
+    <span>Фамилия: {{user.userDetails.lastName}}</span>
+    <span>Никнейм: {{user.userDetails.nick}}</span>
+    <span>Email адресс: {{user.email}}</span>
 </div>
