--- a/client/src/app/components/registration/dialog/create-user-dialog.html
+++ b/client/src/app/components/registration/dialog/create-user-dialog.html
@@ -4,6 +4,6 @@
     создан успешно!</p>
 </div>
 <div mat-dialog-actions>
-    <button mat-button color="primary" (click)="onNoClick()">Назад</button>
-    <button mat-button color="warn" (click)="onYesClick()" cdkFocusInitial>Перейти на страницу логина</button>
+    <button mat-raised-button color="primary" (click)="onNoClick()">Назад</button>
+    <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Перейти на страницу логина</button>
 </div>
