--- a/client/src/app/components/music/music.component.html
+++ b/client/src/app/components/music/music.component.html
@@ -1,3 +1,42 @@
-<p>
-  music works!
-</p>
+<mat-sidenav-container class="music-container">
+    <mat-sidenav mode="side" class="left-container" opened>
+        <p class="music-filter-label">Фильтры</p>
+        <div>
+            <mat-form-field class="music-filter-text-input" appearance="outline">
+                <mat-label>Жанр</mat-label>
+                <input matInput placeholder="Введите интересующий жанр">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="music-filter-text-input" appearance="outline">
+                <mat-label>Настроение</mat-label>
+                <input matInput placeholder="Введите интересующее вас настроение музыки">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="music-filter-text-input" appearance="outline">
+                <mat-label>Плейлист</mat-label>
+                <input matInput placeholder="Введите название плейлиста">
+            </mat-form-field>
+        </div>
+        <div>
+            <button class="music-filter-search-button" mat-raised-button color="primary">Поиск</button>
+            <button class="music-filter-search-button" mat-raised-button color="warn">Сброс фильтров</button>
+        </div>
+    </mat-sidenav>
+    <mat-sidenav-content class="right-container">
+        <mat-list>
+            <h3 mat-subheader>Музыка</h3>
+            <mat-list-item *ngFor="let track of tracks" class="track-item">
+                <h4 mat-line>
+                    <mat-basic-audio-player [audioUrl]="track.filename" class="track-item-control">
+                    </mat-basic-audio-player>
+                </h4>
+                <p mat-line> {{track.title + ", " + track.artist + ", " + track.year}} </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+        </mat-list>
+        <span *ngIf="tracks.length === 0">На данный момент в системе отсутствуют музыкальные композиции</span>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
