1) small fix upload page 2) implement about page

--- a/client/src/app/components/upload/dialog/create-track-dialog.html
+++ b/client/src/app/components/upload/dialog/create-track-dialog.html
@@ -5,9 +5,8 @@
     <p><label>Артист: </label>{{data.artist}}</p>
     <p><label>Альбом: </label>{{data.album}}</p>
     <p><label>Год: </label>{{data.year}}</p>
-
 </div>
 <div mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="onNoClick()">Продолжить загрузку</button>
-    <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Перейти на страницу музыки</button>
+    <p>Идет добавление в коллекцию...</p>
+    <mat-progress-bar color="warn" mode="indeterminate"></mat-progress-bar>
 </div>
