--- a/client/src/app/components/music/music.component.html
+++ b/client/src/app/components/music/music.component.html
@@ -3,6 +3,18 @@
         <p class="music-filter-label">Фильтры</p>
         <div>
             <mat-form-field class="music-filter-text-input" appearance="outline">
+                <mat-label>Название песни</mat-label>
+                <input matInput placeholder="Введите название песни">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="music-filter-text-input" appearance="outline">
+                <mat-label>Автор</mat-label>
+                <input matInput placeholder="Введите интересующего автора или группу">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="music-filter-text-input" appearance="outline">
                 <mat-label>Жанр</mat-label>
                 <input matInput placeholder="Введите интересующий жанр">
             </mat-form-field>
