fix loading og tracks and add new tab to home view

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -21,6 +21,9 @@
                 <mat-tab label="Моя музыка">
                     <span *ngIf="myMusic.length === 0">На данный момент у вас нет музыки</span>
                 </mat-tab>
+                <mat-tab label="Мои плейлисты">
+                    <span *ngIf="myMusic.length === 0">На данный момент у вас нет плейлистов</span>
+                </mat-tab>
                 <mat-tab label="Мои друзья">
                     <span *ngIf="myFriends.length === 0">Вы еще не добавили никого в друзья</span>
                 </mat-tab>
