small ui fix of users and music settings and add cascade for settings

--- a/client/src/app/components/settings/settings.component.html
+++ b/client/src/app/components/settings/settings.component.html
@@ -1,3 +1,19 @@
-<p>
-  settings works!
-</p>
+<mat-sidenav-container class="settings-container">
+  <mat-sidenav mode="side" class="left-container" opened>
+  </mat-sidenav>
+  <mat-sidenav-content class="right-container">
+    <mat-list>
+      <h3 mat-subheader>Настройки</h3>
+      <mat-tab-group>
+        <mat-tab label="Настройки аккаунта">
+          <span>Контент настроек аккаунта</span>
+        </mat-tab>
+        <mat-tab label="Настройки профиля">
+          <span>Контент настроек профиля</span>
+        </mat-tab>
+      </mat-tab-group>
+    </mat-list>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
