--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
                 <mat-card-title>Мой профиль</mat-card-title>
                 <mat-card-subtitle>{{userName}}</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="./assets/image/empty-profile-black.png" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="./assets/image/empty-profile-black.png" alt="">
             <mat-card-content class="user-info">
                 <p>Email: {{userEmail}}</p>
                 <p>Никнейм: {{userNickName}}</p>
