--- a/client/src/app/components/settings/settings.component.html
+++ b/client/src/app/components/settings/settings.component.html
@@ -1,19 +1,97 @@
 <mat-sidenav-container class="settings-container">
-  <mat-sidenav mode="side" class="left-container" opened>
-  </mat-sidenav>
-  <mat-sidenav-content class="right-container">
-    <mat-list>
-      <h3 mat-subheader>Настройки</h3>
-      <mat-tab-group>
-        <mat-tab label="Настройки аккаунта">
-          <span>Контент настроек аккаунта</span>
-        </mat-tab>
-        <mat-tab label="Настройки профиля">
-          <span>Контент настроек профиля</span>
-        </mat-tab>
-      </mat-tab-group>
-    </mat-list>
-  </mat-sidenav-content>
+    <mat-sidenav mode="side" class="left-container" opened>
+    </mat-sidenav>
+    <mat-sidenav-content class="right-container">
+        <mat-list>
+            <h3 mat-subheader>Настройки</h3>
+            <mat-tab-group class="settings-tab">
+                <mat-tab label="Настройки аккаунта">
+                    <h3>Тут вы можете отредактировать данные своего профиля</h3>
+                    <div>
+                        <mat-form-field class="setting-text-input" appearance="outline">
+                            <mat-label>Email</mat-label>
+                            <input matInput type="email" placeholder="Введите новый email адресс" [(ngModel)]="loggedUser.email">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field class="setting-text-input" appearance="outline">
+                            <mat-label>Текущий Пароль</mat-label>
+                            <input matInput type="password" placeholder="Введите новый пароль" [(ngModel)]="loggedUser.password">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <mat-form-field class="setting-text-input" appearance="outline">
+                            <mat-label>Новый Пароль</mat-label>
+                            <input matInput type="password" placeholder="Введите новый пароль" [(ngModel)]="loggedUser.newPassword">
+                        </mat-form-field>
+                    </div>
+                    <div>
+                        <label *ngIf="isAccountDataNotCorrect" class="save-error-label">Ошибка, вы ввели неккоретные данные!</label>
+                    </div>
+                    <div>
+                        <button mat-raised-button color="primary" (click)="saveAccount()">Сохранить</button>
+                    </div>
+                </mat-tab>
+                <mat-tab label="Настройки профиля">
+                    <h3>Тут вы можете отредактировать информацию о себе</h3>
+                    <div class="about-container">
+                        <div class="about-left">
+                            <mat-card class="user-card">
+                                <mat-card-header>
+                                    <div mat-card-avatar class="example-header-image"></div>
+                                    <mat-card-title>Мой профиль</mat-card-title>
+                                    <mat-card-subtitle>Аватар</mat-card-subtitle>
+                                </mat-card-header>
+                                <img mat-card-image style="width: 100%;height: 100%" src="./assets/image/empty-profile-black.png" alt="">
+                                <mat-card-content class="user-info">
+                                    <input type="file" name="file"/>
+                                    <button style="margin-top: 10px" mat-raised-button color="primary">Загрузить</button>
+                                    <button style="margin-left: 10px" mat-raised-button color="accent">Удалить</button>
+                                    <!--<label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>-->
+                                </mat-card-content>
+                            </mat-card>
+                        </div>
+                        <div class="about-right">
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Имя</mat-label>
+                                    <input matInput type="email" placeholder="Введите имя">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Фамилия</mat-label>
+                                    <input matInput type="email" placeholder="Введите фамилию">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Никнейм</mat-label>
+                                    <input matInput type="email" placeholder="Введите никнейм">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>О себе</mat-label>
+                                    <input matInput type="email" placeholder="Введите информацию о себе">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                            <mat-form-field class="setting-text-input">
+                                <input matInput [matDatepicker]="picker" placeholder="Введите свою дату рождения">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                            </mat-form-field>
+                            </div>
+                            <div>
+                                <button style="margin-top: 10px" mat-raised-button color="warn">Сохранить</button>
+                            </div>
+                        </div>
+                    </div>
+                </mat-tab>
+            </mat-tab-group>
+        </mat-list>
+    </mat-sidenav-content>
 </mat-sidenav-container>
 
 
