--- a/client/src/app/components/settings/settings.component.html
+++ b/client/src/app/components/settings/settings.component.html
@@ -42,12 +42,14 @@
                                     <mat-card-title>Мой профиль</mat-card-title>
                                     <mat-card-subtitle>Аватар</mat-card-subtitle>
                                 </mat-card-header>
-                                <img mat-card-image style="width: 100%;height: 100%" src="./assets/image/empty-profile-black.png" alt="">
+                                <img *ngIf="loggedUser.userDetails.photoLink === null" mat-card-image style="width: 100%;height: 100%" src="./assets/image/empty-profile-black.png" alt="">
+                                <img *ngIf="loggedUser.userDetails.photoLink !== null" mat-card-image style="width: 100%;height: 100%" src="{{loggedUser.userDetails.photoLink}}" alt="">
                                 <mat-card-content class="user-info">
-                                    <input type="file" name="file"/>
-                                    <button style="margin-top: 10px" mat-raised-button color="primary">Загрузить</button>
+                                    <input type="file" name="file" (change)="setFileForUpload($event.target.files)"/>
+                                    <button style="margin-top: 10px" mat-raised-button color="primary" (click)="uploadFile()">Загрузить</button>
                                     <button style="margin-left: 10px" mat-raised-button color="accent">Удалить</button>
-                                    <!--<label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>-->
+                                    <label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>
+                                    <label *ngIf="isError" class="uploaded-error-label">Произошла ошибка при загрузке файла!</label>
                                 </mat-card-content>
                             </mat-card>
                         </div>
