--- a/client/src/app/components/settings/settings.component.html
+++ b/client/src/app/components/settings/settings.component.html
@@ -5,8 +5,67 @@
         <mat-list>
             <h3 mat-subheader>Настройки</h3>
             <mat-tab-group class="settings-tab">
-                <mat-tab label="Настройки аккаунта">
+                <mat-tab label="Настройки профиля">
                     <h3>Тут вы можете отредактировать данные своего профиля</h3>
+                    <div class="about-container">
+                        <div class="about-left">
+                            <mat-card class="user-card">
+                                <mat-card-header>
+                                    <div mat-card-avatar class="example-header-image"></div>
+                                    <mat-card-title>Мой профиль</mat-card-title>
+                                    <mat-card-subtitle>Аватар</mat-card-subtitle>
+                                </mat-card-header>
+                                <img *ngIf="loggedUser.userDetails.photoLink === null" mat-card-image style="width: 100%;height: 100%" src="./assets/image/empty-profile-black.png" alt="">
+                                <img *ngIf="loggedUser.userDetails.photoLink !== null" mat-card-image style="width: 100%;height: 100%" src="{{loggedUser.userDetails.photoLink}}" alt="">
+                                <mat-card-content class="user-info">
+                                    <input type="file" name="file" (change)="setFileForUpload($event.target.files)"/>
+                                    <button style="margin-top: 10px" mat-raised-button color="primary" (click)="uploadFile()">Загрузить</button>
+                                    <button style="margin-left: 10px" mat-raised-button color="accent" (click)="deleteFile()">Удалить</button>
+                                    <label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>
+                                    <label *ngIf="isError" class="uploaded-error-label">Произошла ошибка при загрузке файла!</label>
+                                </mat-card-content>
+                            </mat-card>
+                        </div>
+                        <div class="about-right">
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Имя</mat-label>
+                                    <input matInput type="email" placeholder="Введите имя" [(ngModel)]="loggedUser.userDetails.firstName">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Фамилия</mat-label>
+                                    <input matInput type="email" placeholder="Введите фамилию" [(ngModel)]="loggedUser.userDetails.lastName">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>Никнейм</mat-label>
+                                    <input matInput type="email" placeholder="Введите никнейм" [(ngModel)]="loggedUser.userDetails.nick">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input" appearance="outline">
+                                    <mat-label>О себе</mat-label>
+                                    <input matInput type="email" placeholder="Введите информацию о себе" [(ngModel)]="loggedUser.userDetails.about">
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <mat-form-field class="setting-text-input">
+                                    <input matInput [matDatepicker]="picker" placeholder="Введите свою дату рождения" [(ngModel)]="loggedUser.birthday">
+                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker></mat-datepicker>
+                                </mat-form-field>
+                            </div>
+                            <div>
+                                <button style="margin-top: 10px" mat-raised-button color="warn" (click)="saveUserInfo()">Сохранить</button>
+                            </div>
+                        </div>
+                    </div>
+                </mat-tab>
+                <mat-tab label="Настройки аккаунта">
+                    <h3>Тут вы можете отредактировать информацию о себе</h3>
                     <div>
                         <mat-form-field class="setting-text-input" appearance="outline">
                             <mat-label>Email</mat-label>
@@ -30,65 +89,6 @@
                     </div>
                     <div>
                         <button mat-raised-button color="primary" (click)="saveAccount()">Сохранить</button>
-                    </div>
-                </mat-tab>
-                <mat-tab label="Настройки профиля">
-                    <h3>Тут вы можете отредактировать информацию о себе</h3>
-                    <div class="about-container">
-                        <div class="about-left">
-                            <mat-card class="user-card">
-                                <mat-card-header>
-                                    <div mat-card-avatar class="example-header-image"></div>
-                                    <mat-card-title>Мой профиль</mat-card-title>
-                                    <mat-card-subtitle>Аватар</mat-card-subtitle>
-                                </mat-card-header>
-                                <img *ngIf="loggedUser.userDetails.photoLink === null" mat-card-image style="width: 100%;height: 100%" src="./assets/image/empty-profile-black.png" alt="">
-                                <img *ngIf="loggedUser.userDetails.photoLink !== null" mat-card-image style="width: 100%;height: 100%" src="{{loggedUser.userDetails.photoLink}}" alt="">
-                                <mat-card-content class="user-info">
-                                    <input type="file" name="file" (change)="setFileForUpload($event.target.files)"/>
-                                    <button style="margin-top: 10px" mat-raised-button color="primary" (click)="uploadFile()">Загрузить</button>
-                                    <button style="margin-left: 10px" mat-raised-button color="accent">Удалить</button>
-                                    <label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>
-                                    <label *ngIf="isError" class="uploaded-error-label">Произошла ошибка при загрузке файла!</label>
-                                </mat-card-content>
-                            </mat-card>
-                        </div>
-                        <div class="about-right">
-                            <div>
-                                <mat-form-field class="setting-text-input" appearance="outline">
-                                    <mat-label>Имя</mat-label>
-                                    <input matInput type="email" placeholder="Введите имя">
-                                </mat-form-field>
-                            </div>
-                            <div>
-                                <mat-form-field class="setting-text-input" appearance="outline">
-                                    <mat-label>Фамилия</mat-label>
-                                    <input matInput type="email" placeholder="Введите фамилию">
-                                </mat-form-field>
-                            </div>
-                            <div>
-                                <mat-form-field class="setting-text-input" appearance="outline">
-                                    <mat-label>Никнейм</mat-label>
-                                    <input matInput type="email" placeholder="Введите никнейм">
-                                </mat-form-field>
-                            </div>
-                            <div>
-                                <mat-form-field class="setting-text-input" appearance="outline">
-                                    <mat-label>О себе</mat-label>
-                                    <input matInput type="email" placeholder="Введите информацию о себе">
-                                </mat-form-field>
-                            </div>
-                            <div>
-                            <mat-form-field class="setting-text-input">
-                                <input matInput [matDatepicker]="picker" placeholder="Введите свою дату рождения">
-                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                <mat-datepicker #picker></mat-datepicker>
-                            </mat-form-field>
-                            </div>
-                            <div>
-                                <button style="margin-top: 10px" mat-raised-button color="warn">Сохранить</button>
-                            </div>
-                        </div>
                     </div>
                 </mat-tab>
             </mat-tab-group>
