implement user details saving

--- a/client/src/app/components/settings/settings.component.html
+++ b/client/src/app/components/settings/settings.component.html
@@ -58,6 +58,7 @@
                                     <mat-datepicker #picker></mat-datepicker>
                                 </mat-form-field>
                             </div>
+                            <label *ngIf="isAccountInfoDataNotCorrect" class="uploaded-error-label">Неккоректные данные!</label>
                             <div>
                                 <button style="margin-top: 10px" mat-raised-button color="warn" (click)="saveUserInfo()">Сохранить</button>
                             </div>
