--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -11,3 +11,10 @@ a {
 body {
     font-family: "Roboto";
 }
+
+.main {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+}
