--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,7 +10,7 @@
             <button class="header-panel-el" routerLink="/about" mat-raised-button>О нас</button>
         </div>
         <div class="header-control-auth-panel">
-            <div class="header-panel-el">Вошел как {{shared.loggedUser.userDetails.firstName + " " + shared.loggedUser.userDetails.lastName}}</div>
+            <div class="header-panel-el">Вы вошли как: {{shared.loggedUser.userDetails.firstName + " " + shared.loggedUser.userDetails.lastName}}</div>
             <button class="header-panel-el" routerLink="/settings" mat-raised-button color="accent">Настройки</button>
             <button class="header-panel-el" mat-raised-button color="warn" (click)="shared.logout()">Выход</button>
         </div>
