--- a/client/src/app/components/registration/registration.component.html
+++ b/client/src/app/components/registration/registration.component.html
@@ -3,10 +3,12 @@
   <mat-form-field class="registration-text-input" appearance="outline">
     <mat-label>Email</mat-label>
     <input matInput type="email" placeholder="Введите свой email адресс" [(ngModel)]="newUser.email">
+    <mat-hint class="text-filed-hint">Это поле обязательно к заполнению</mat-hint>
   </mat-form-field>
   <mat-form-field class="registration-text-input" appearance="outline">
     <mat-label>Пароль</mat-label>
     <input matInput type="password" placeholder="Придумайте пароль" [(ngModel)]="newUser.password">
+    <mat-hint class="text-filed-hint">Это поле обязательно к заполнению</mat-hint>
   </mat-form-field>
   <mat-form-field class="registration-text-input" appearance="outline">
     <mat-label>Имя</mat-label>
