--- a/client/src/app/components/settings/settings.component.css
+++ b/client/src/app/components/settings/settings.component.css
@@ -40,3 +40,23 @@
 .uploaded-error-label {
     color: red;
 }
+.uploaded-success-label {
+    color: green;
+}
+
+.user-image {
+    width: 100%;
+    height: 100%;
+}
+
+.upload-button {
+    margin-top: 10px;
+}
+
+.save-button {
+    margin-top: 10px;
+}
+
+.delete-button {
+    margin-left: 10px;
+}
