--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -8,6 +8,7 @@
         <mat-label>Пароль</mat-label>
         <input matInput type="password" placeholder="Введите свой пароль" [(ngModel)]="model.password">
     </mat-form-field>
+    <mat-checkbox [(ngModel)]="isRemember">Запомнить меня</mat-checkbox>
     <label *ngIf="isAuthError" class="login-error-label">Ошибка, неверный логин или пароль!</label>
     <div class="login-buttons">
         <button class="login-button" mat-raised-button color="primary" (click)="login()">Вход</button>
