--- a/client/src/app/components/users/users.component.html
+++ b/client/src/app/components/users/users.component.html
@@ -36,7 +36,7 @@
       <mat-list-item *ngFor="let user of users">
         <mat-icon mat-list-icon>accessibility</mat-icon>
         <h4 mat-line>{{user.userDetails.firstName + " " + user.userDetails.lastName}}
-          <button class="go-to-profile" mat-raised-button color="primary">Перейти в профиль</button>
+          <button class="go-to-profile" mat-raised-button color="primary" (click)="gotoProfile(user.id)">Перейти в профиль</button>
         </h4>
         <p mat-line> {{user.userDetails.nick}} </p>
       </mat-list-item>
