--- a/client/src/app/components/music/music.component.css
+++ b/client/src/app/components/music/music.component.css
@@ -28,10 +28,36 @@
 }
 
 .track-item-control {
-    width: 20%;
 }
 
 .header-label {
     position: absolute;
     margin-top: 5px;
 }
+
+.list-item-container {
+    display: flex;
+    width: 100%;
+}
+.track-item {
+    width: 65%;
+}
+
+.control-item {
+    width: 35%;
+    margin-top: 3%;
+}
+
+.track-title {
+    margin-top: -2%;
+}
+
+.item {
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.rate {
+    width: 120px;
+}
+
