--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 ﻿<mat-sidenav-container class="home-container">
-    <mat-sidenav mode="side" class="left-container" opened>
+    <mat-sidenav mode="side" class="home-left-container" opened>
         <mat-card class="user-card">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
@@ -16,7 +16,7 @@
             </mat-card-content>
         </mat-card>
     </mat-sidenav>
-    <mat-sidenav-content class="right-container">
+    <mat-sidenav-content class="home-right-container">
         <mat-list>
             <mat-tab-group>
                 <mat-tab label="Моя музыка">
@@ -28,20 +28,20 @@
                                        (page)="pageEvent = loadTracksList($event)"
                                        *ngIf="myMusic.length !== 0">
                         </mat-paginator>
-                        <mat-list-item *ngFor="let track of myMusic" class="track-item">
-                            <div class="list-item-container">
-                                <div class="track-item">
-                                    <h4 mat-line class="track-item-control">
+                        <mat-list-item *ngFor="let track of myMusic" class="home-track-item">
+                            <div class="home-list-item-container">
+                                <div class="home-track-item">
+                                    <h4 mat-line class="home-track-item-control">
                                         <mat-basic-audio-player [audioUrl]="track.filename">
                                         </mat-basic-audio-player>
                                     </h4>
-                                    <p mat-line class="track-title"> {{track.title + ", " + track.artist + ", " + track.year}} </p>
+                                    <p mat-line class="home-track-title"> {{track.title + ", " + track.artist + ", " + track.year}} </p>
                                 </div>
-                                <div class="control-item">
-                                    <mat-icon class="item" mat-list-icon>add_circle_outline</mat-icon>
-                                    <mat-icon class="item" mat-list-icon>create</mat-icon>
-                                    <mat-icon class="item" mat-list-icon>clear</mat-icon>
-                                    <mat-form-field class="item rate">
+                                <div class="home-control-item">
+                                    <mat-icon class="home-item" mat-list-icon>add_circle_outline</mat-icon>
+                                    <mat-icon class="home-item" mat-list-icon>create</mat-icon>
+                                    <mat-icon class="home-item" mat-list-icon>clear</mat-icon>
+                                    <mat-form-field class="home-item home-rate">
                                         <mat-label>Ваша оценка</mat-label>
                                         <mat-select>
                                             <mat-option>None</mat-option>
@@ -50,7 +50,7 @@
                                             <mat-option value="3">3</mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
+                                    <span class="home-item">Рейтинг: <b>{{track.rating}}</b></span>
                                 </div>
                             </div>
                         </mat-list-item>
