--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -28,20 +28,19 @@
                                        (page)="pageEvent = loadTracksList($event)"
                                        *ngIf="myMusic.length !== 0">
                         </mat-paginator>
-                        <mat-list-item *ngFor="let track of myMusic" class="home-track-item">
-                            <div class="home-list-item-container">
-                                <div class="home-track-item">
-                                    <h4 mat-line class="home-track-item-control">
-                                        <mat-basic-audio-player [audioUrl]="track.filename">
-                                        </mat-basic-audio-player>
-                                    </h4>
-                                    <p mat-line class="home-track-title"> {{track.title + ", " + track.artist + ", " + track.year}} </p>
+                        <mat-list-item *ngFor="let track of myMusic" class="track-item">
+                            <h4 mat-line class="track-item-control">
+                                <mat-basic-audio-player [audioUrl]="track.filename">
+                                </mat-basic-audio-player>
+                            </h4>
+                            <div mat-line class="track-title">
+                                <div>
+                                    {{track.title + ", " + track.artist + ", " + track.year}}
                                 </div>
-                                <div class="home-control-item">
-                                    <mat-icon class="home-item" mat-list-icon>add_circle_outline</mat-icon>
-                                    <mat-icon class="home-item" mat-list-icon>create</mat-icon>
-                                    <mat-icon class="home-item" mat-list-icon>clear</mat-icon>
-                                    <mat-form-field class="home-item home-rate">
+                                <div>
+                                    <mat-icon class="item" mat-list-icon>create</mat-icon>
+                                    <mat-icon class="item" mat-list-icon>clear</mat-icon>
+                                    <mat-form-field class="item rate">
                                         <mat-label>Ваша оценка</mat-label>
                                         <mat-select>
                                             <mat-option>None</mat-option>
@@ -50,7 +49,7 @@
                                             <mat-option value="3">3</mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <span class="home-item">Рейтинг: <b>{{track.rating}}</b></span>
+                                    <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
                                 </div>
                             </div>
                         </mat-list-item>
