--- a/client/src/app/components/music/music.component.html
+++ b/client/src/app/components/music/music.component.html
@@ -45,29 +45,29 @@
                            [pageSizeOptions]="pageSizeOptions"
                            (page)="pageEvent = loadTracksList($event)">
             </mat-paginator>
-            <mat-list-item *ngFor="let track of tracks">
-                <div class="list-item-container">
-                    <div class="track-item">
-                        <h4 mat-line class="track-item-control">
-                            <mat-basic-audio-player [audioUrl]="track.filename">
-                            </mat-basic-audio-player>
-                        </h4>
-                        <p mat-line class="track-title"> {{track.title + ", " + track.artist + ", " + track.year}} </p>
+            <mat-list-item *ngFor="let track of tracks" class="track-item">
+                <h4 mat-line class="track-item-control">
+                    <mat-basic-audio-player [audioUrl]="track.filename">
+                    </mat-basic-audio-player>
+                </h4>
+                <div mat-line class="track-title">
+                    <div>
+                        {{track.title + ", " + track.artist + ", " + track.year}}
                     </div>
-                    <div class="control-item">
-                        <mat-icon class="item" mat-list-icon (click)="addTrackToUser(track.id)">add_circle_outline</mat-icon>
-                        <mat-icon class="item" mat-list-icon>create</mat-icon>
-                        <mat-icon class="item" mat-list-icon>clear</mat-icon>
-                        <mat-form-field class="item rate">
-                            <mat-label>Ваша оценка</mat-label>
-                            <mat-select>
-                                <mat-option>None</mat-option>
-                                <mat-option value="1">1</mat-option>
-                                <mat-option value="2">2</mat-option>
-                                <mat-option value="3">3</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                        <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
+                    <div>
+                    <mat-icon class="item" mat-list-icon (click)="addTrackToUser(track.id)">add_circle_outline</mat-icon>
+                    <mat-icon class="item" mat-list-icon>create</mat-icon>
+                    <mat-icon class="item" mat-list-icon>clear</mat-icon>
+                    <mat-form-field class="item rate">
+                        <mat-label>Ваша оценка</mat-label>
+                        <mat-select>
+                            <mat-option>None</mat-option>
+                            <mat-option value="1">1</mat-option>
+                            <mat-option value="2">2</mat-option>
+                            <mat-option value="3">3</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
                     </div>
                 </div>
             </mat-list-item>
