implement track deleting

--- a/client/src/app/components/music/music.component.html
+++ b/client/src/app/components/music/music.component.html
@@ -57,7 +57,7 @@
                     <div>
                     <mat-icon class="item" mat-list-icon (click)="addTrackToUser(track.id)">add_circle_outline</mat-icon>
                     <mat-icon class="item" mat-list-icon>create</mat-icon>
-                    <mat-icon class="item" mat-list-icon>clear</mat-icon>
+                    <mat-icon class="item" mat-list-icon (click)="deleteTrack(track)">clear</mat-icon>
                     <mat-form-field class="item rate">
                         <mat-label>Ваша оценка</mat-label>
                         <mat-select>
@@ -65,6 +65,13 @@
                             <mat-option value="1">1</mat-option>
                             <mat-option value="2">2</mat-option>
                             <mat-option value="3">3</mat-option>
+                            <mat-option value="4">4</mat-option>
+                            <mat-option value="5">5</mat-option>
+                            <mat-option value="6">6</mat-option>
+                            <mat-option value="7">7</mat-option>
+                            <mat-option value="8">8</mat-option>
+                            <mat-option value="9">9</mat-option>
+                            <mat-option value="10">10</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <span class="item">Рейтинг: <b>{{track.rating}}</b></span>
