implement rate track and deleting, also deleting only from user

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -38,11 +38,11 @@
                                     {{track.title + ", " + track.artist + ", " + track.year}}
                                 </div>
                                 <div>
-                                    <mat-icon class="item" mat-list-icon>create</mat-icon>
-                                    <mat-icon class="item" mat-list-icon>clear</mat-icon>
+                                    <mat-icon class="item" mat-list-icon (click)="changeTrack(track)">create</mat-icon>
+                                    <mat-icon class="item" mat-list-icon (click)="deleteTrackFromUser(track)">clear</mat-icon>
                                     <mat-form-field class="item rate">
                                         <mat-label>Ваша оценка</mat-label>
-                                        <mat-select>
+                                        <mat-select [(ngModel)]="track.tempRating" (selectionChange)="rateTrack(track)">
                                             <mat-option>None</mat-option>
                                             <mat-option value="1">1</mat-option>
                                             <mat-option value="2">2</mat-option>
