--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
@@ -7,7 +7,9 @@
         <mat-card-subtitle>{{printUserName()}}</mat-card-subtitle>
       </mat-card-header>
       <img *ngIf="isEmptyPhotoLink()" mat-card-image src="./assets/image/empty-profile-black.png" alt="">
-      <img *ngIf="!isEmptyPhotoLink()" mat-card-image src="{{getUserPhotoLink()}}" alt="">
+      <div *ngIf="!isEmptyPhotoLink()">
+        <img *ngFor="let file of photos | async" mat-card-image src="{{file}}" alt="">
+      </div>
       <mat-card-content class="user-info">
         <p>Email: {{user.email}}</p>
         <p>Никнейм: {{user.userDetails.nick}}</p>
