--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.html
@@ -7,7 +7,9 @@
                 <mat-card-subtitle>{{printUserName()}}</mat-card-subtitle>
             </mat-card-header>
             <img *ngIf="isEmptyPhotoLink()" mat-card-image src="./assets/image/empty-profile-black.png" alt="">
-            <img *ngIf="!isEmptyPhotoLink()" mat-card-image src="{{getUserPhotoLink()}}" alt="">
+            <div *ngIf="!isEmptyPhotoLink()">
+                <img *ngFor="let file of photos | async" mat-card-image src="{{file}}" alt="">
+            </div>
             <mat-card-content class="user-info">
                 <p>Email: {{user.email}}</p>
                 <p>Никнейм: {{user.userDetails.nick}}</p>
@@ -30,7 +32,7 @@
                         </mat-paginator>
                         <mat-list-item *ngFor="let track of myMusic" class="track-item">
                             <h4 mat-line class="track-item-control">
-                                <mat-basic-audio-player [audioUrl]="track.filename">
+                                <mat-basic-audio-player *ngFor="let file of track.files | async" [audioUrl]="file">
                                 </mat-basic-audio-player>
                             </h4>
                             <div mat-line class="track-title">
