--- a/music-cloud-web/src/main/web/src/app/components/settings/settings.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/settings/settings.component.html
@@ -16,13 +16,21 @@
                                     <mat-card-subtitle>Аватар</mat-card-subtitle>
                                 </mat-card-header>
                                 <img *ngIf="loggedUser.userDetails.photoLink === null" mat-card-image class="user-image" src="./assets/image/empty-profile-black.png" alt="">
-                                <img *ngIf="loggedUser.userDetails.photoLink !== null" mat-card-image class="user-image" src="{{loggedUser.userDetails.photoLink}}" alt="">
+                                <div *ngIf="loggedUser.userDetails.photoLink !== null">
+                                    <img *ngFor="let file of photos | async" mat-card-image src="{{file}}" alt="">
+                                </div>
                                 <mat-card-content class="user-info">
-                                    <input type="file" name="file" (change)="setFileForUpload($event.target.files)"/>
-                                    <button class="upload-button" mat-raised-button color="primary" (click)="uploadFile()">Загрузить</button>
+                                    <div *ngIf="currentFileUpload" class="progress">
+                                        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{progress.percentage}}"
+                                             aria-valuemin="0" aria-valuemax="100" [ngStyle]="{width:progress.percentage+'%'}">
+                                            {{progress.percentage}}%</div>
+                                    </div>
+                                    <label class="btn btn-default">
+                                        <input type="file" name="file" (change)="selectFile($event)"/>
+                                    </label>
+                                    <button class="upload-button" mat-raised-button color="primary" [disabled]="!selectedFiles" (click)="upload()">Загрузить</button>
                                     <button class="delete-button" mat-raised-button color="accent" (click)="deleteFile()">Удалить</button>
                                     <p>
-                                        <label *ngIf="isNotChoosed" class="uploaded-error-label">Файл не выбран!</label>
                                         <label *ngIf="isError" class="uploaded-error-label">Произошла ошибка при загрузке файла!</label>
                                         <label *ngIf="isEmpty" class="uploaded-error-label">Нечего удалять!</label>
                                     </p>
