--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.css
@@ -9,3 +9,18 @@
 .left-container {
     width: 30%;
 }
+
+.track-item {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.track-title {
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.audio-player {
+    width: 100%;
+}
