--- a/music-cloud-web/src/main/web/src/app/components/music/music.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/music/music.component.html
@@ -47,8 +47,11 @@
             </mat-paginator>
             <mat-list-item *ngFor="let track of tracks" class="track-item">
                 <h4 mat-line class="track-item-control">
-                    <mat-basic-audio-player *ngFor="let file of track.files | async" [audioUrl]="file">
-                    </mat-basic-audio-player>
+                    <audio controls *ngFor="let file of track.files | async" class="audio-player">
+                        <source src={{file}} type="audio/mpeg">
+                        <p>Ваш браузер не поддерживает HTML5 audio. Воспользуйтесь
+                            <a href={{file}}>этой ссыклой</a></p>
+                    </audio>
                 </h4>
                 <div mat-line class="track-title">
                     <div>
