resource loading and login page text label were fixed

--- a/music-cloud-web/src/main/web/src/app/components/login/login.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="login-container">
-    <h3>Пожалуйста, введите свой данные для логина</h3>
+    <h3>Пожалуйста, введите свои данные для логина</h3>
     <mat-form-field class="login-text-input" appearance="outline">
         <mat-label>Email</mat-label>
         <input matInput type="email" placeholder="Введите свой email адресс" [(ngModel)]="model.email">
