fori was deleted, text errors were fixed, track deleting was fixed, small refactoring

--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.html
@@ -21,7 +21,7 @@
   <mat-sidenav-content class="right-container">
     <mat-list>
       <mat-tab-group>
-        <mat-tab label="Моя музыка">
+        <mat-tab label="Музыка пользователя">
           <mat-list>
             <mat-paginator [length]="tracksLength"
                            [pageIndex]="page"
