--- a/music-cloud-web/src/main/web/src/app/components/upload/upload.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/upload/upload.component.html
@@ -8,5 +8,6 @@
          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{width:progress.percentage+'%'}">
       {{progress.percentage}}%</div>
   </div>
+  <span *ngIf="isSuccess" class="uploaded-success-label">Файл успешно загружен!</span>
   <button class="upload-container-item" mat-raised-button color="primary" [disabled]="!selectedFiles" (click)="upload()">Загрузить</button>
 </div>
