--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.css
@@ -1,11 +1,13 @@
 .about-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     height: calc(100vh - 64px);
 }
 
 .about-card {
+}
+
+.about-right-container {
+}
+
+.about-left-container {
     width: 30%;
 }
