New tab with recommended music was added

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -29,6 +29,7 @@
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь все медиа файлы приложения хранятся в облаке на отдельном сервере</mat-list-item>
             <mat-list-item role="listitem">Размер аватра пользователя ограничен до 300px по ширине</mat-list-item>
+            <mat-list-item role="listitem">Добавлена страница рекомендованных треков</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
