--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,11 +25,12 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
+          <label>Версия релиза 0.0.26 alpha 2</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь все медиа файлы приложения хранятся в облаке на отдельном сервере</mat-list-item>
-            <mat-list-item role="listitem">Размер аватра пользователя ограничен до 300px по ширине</mat-list-item>
-            <mat-list-item role="listitem">Добавлена страница рекомендованных треков</mat-list-item>
+            <mat-list-item role="listitem">Размер аватара пользователя ограничен до 300px по ширине</mat-list-item>
+            <mat-list-item role="listitem">Улучшена страница рекомендованных треков</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
